test/fixtures/errors/add-comment-loader.js
module.exports = function(source) {
	return source + "// some comment";
};
